--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.7.2",
     "immer": "^8.0.1",
     "react": "^17.0.1",
+    "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.2",
