--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-scroll": "^1.8.1",
     "styled-components": "^5.2.1",
